# medvedi

./: .codecov.yml  .gitignore  Makefile  README.md  pyproject.toml  requirements-lint.txt  requirements-test.txt  requirements.txt  setup.py
.github/workflows/: publish.yml  push.yml
medvedi/: __init__.py  accelerators.pyx  dataframe.py  io.pyx  merge_to_str.py  metadata.py  pure_static.py  testing.py
medvedi/native/: memnrchr.h  mi_heap_destroy_stl_allocator.pxd  mi_heap_destroy_stl_allocator.pyx  numpy.pxd
medvedi/tests/: test_accelerators.py  test_arrow.py  test_astype.py  test_columns.py  test_concat.py  test_copy.py  test_duplicates.py  test_explode.py  test_fillna.py  test_groupby.py  test_iloc.py  test_in.py  test_index.py  test_init.py  test_isin.py  test_isnull.py  test_iter.py  test_join.py  test_merge_to_str.py  test_metadata.py  test_noneminmax.py  test_rename.py  test_sample.py  test_serialization.py  test_sort_values.py  test_take.py  test_unique.py
